@@ -4,7 +4,7 @@ Title: Geographic analysis and modeling with raster data
 Version: 1.6-18
 Date: 13-November-2010
 Depends: methods, sp, R (>= 2.8.0)
-Suggests: rgdal (>= 0.5-33), ncdf, igraph, tcltk, lattice, rgl
+Suggests: rgdal (>= 0.5-33), ncdf, igraph, snow, tcltk, lattice, rgl
 Author: Robert J. Hijmans & Jacob van Etten
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com> 
 Description: Reading, writing, manipulating, analyzing and modeling of gridded spatial data. The package implements basic and high-level functions, as well as map algebra. Processing of very large files is supported.
